--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,10 @@ target-version = ["py38"]
 [tool.ruff]
 line-length = 88
 target-version = "py38"
+
+[tool.ruff.lint]
 select = ["E", "F", "B", "I"]
+ignore = []
 
 [tool.mypy]
 python_version = "3.8"
